# voila-sssp-inspect

./: Procfile  README.md  jupyter_config.json  pyproject.toml  requirements.txt  sssp-inspect.ipynb
sssp_inspect/: plot_utils.py
sssp_inspect/static/: voila.json
sssp_inspect/subwidgets/: periodic_table.py  plot.py  select.py  summary.py
